--- a/ApiPracticeDemoUi/ApiPracticeDemoUi.csproj
+++ b/ApiPracticeDemoUi/ApiPracticeDemoUi.csproj
@@ -94,5 +94,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DemoLibrary\DemoLibrary.csproj">
+      <Project>{ACC44DCA-15AE-45E2-9877-7BBD46DAD82D}</Project>
+      <Name>DemoLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
